--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,7 +42,7 @@
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_perfil" />
+    <include layout="@layout/content_profile" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
