--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.lorenz.konrad.healtapp.PerfilActivity"
-    tools:showIn="@layout/activity_perfil">
+    tools:showIn="@layout/activity_profile">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
