--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/identity_card"
-                    android:inputType="text|number"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:singleLine="true" />
 
