Unifying versions of proyect

--- a/app/src/main/res/layout/content_form.xml
+++ b/app/src/main/res/layout/content_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.lorenz.konrad.healtapp.PerfilActivity"
+    tools:context="com.lorenz.konrad.healtapp.FormActivity"
     tools:showIn="@layout/activity_form">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,11 +14,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
+
                 android:text="Pregunta 1" />
             <EditText
                 android:layout_width="match_parent"
@@ -27,6 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -39,6 +41,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
