--- a/app/src/main/res/layout/content_diagnostic.xml
+++ b/app/src/main/res/layout/content_diagnostic.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.lorenz.konrad.healtapp.FormActivity"
-    tools:showIn="@layout/activity_profile">
+    tools:showIn="@layout/activity_diagnostic">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,6 +14,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:text="@string/large_text" />
+            android:text="@string/diagnostic"
+            android:textSize="@dimen/activity_horizontal_margin"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
