Fix activity_diagnostic and add attach icon

--- a/app/src/main/res/layout/activity_diagnostic.xml
+++ b/app/src/main/res/layout/activity_diagnostic.xml
@@ -22,6 +22,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/text_margin"
                 android:text="@string/name"
                 android:textStyle="bold"
                 android:textSize="25dp"
@@ -32,19 +33,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <android.support.design.widget.FloatingActionButton
+                <ImageButton
                     android:id="@+id/attach"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    app:srcCompat="@android:drawable/ic_input_add" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="5dp"
+                    android:background="@mipmap/ic_attach"
+                    app:srcCompat="@mipmap/ic_attach" />
 
-                <android.support.design.widget.FloatingActionButton
+                <ImageButton
                     android:id="@+id/send"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    app:srcCompat="@android:drawable/ic_dialog_email"/>
+                    android:layout_marginRight="@dimen/fab_margin"
+                    android:background="@android:drawable/ic_menu_send"
+                    app:srcCompat="@android:drawable/ic_menu_send" />
             </LinearLayout>
 
 
