--- a/app/src/main/res/layout/content_diagnostic.xml
+++ b/app/src/main/res/layout/content_diagnostic.xml
@@ -9,16 +9,18 @@
     tools:showIn="@layout/activity_diagnostic">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:text="@string/diagnostic"
-            android:textSize="@dimen/activity_horizontal_margin"/>
+            android:textSize="20dp"/>
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"/>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
