--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,6 +15,7 @@
         <ImageView
             android:id="@+id/sign_up_image"
             android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:src="@mipmap/ic_launcher" />
@@ -60,7 +61,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
         android:orientation="vertical">
         <!--Input Telephone -->
         <android.support.design.widget.TextInputLayout
