--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.lorenz.konrad.healtapp.MainActivity"
+    tools:context="com.lorenz.konrad.healtapp.activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
@@ -15,20 +15,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.502" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="316dp"
-        tools:layout_editor_absoluteY="400dp">
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="379dp"
+        android:id="@+id/relativeLayout">
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:clickable="true"
-            android:src="@mipmap/ic_launcher">
+            android:src="@android:drawable/ic_menu_add"
+            app:backgroundTint="@color/colorPrimary">
 
         </android.support.design.widget.FloatingActionButton>
     </RelativeLayout>
