--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -120,6 +120,37 @@
                 android:hint="@string/family_background"
                 android:textSize="16dp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="Tipo de Usuario"
+                android:textSize="16dp"
+                android:textStyle="bold"/>
+
+            <RadioGroup
+                android:id="@+id/opciones_usuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checkedButton="@+id/patient"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/patient"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Paciente"/>
+
+                <RadioButton
+                    android:id="@+id/doctor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Doctor"/>
+
+            </RadioGroup>
         </android.support.design.widget.TextInputLayout>
 
         <Button
