--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -64,6 +64,12 @@
             tools:text="Optional Action"
             tools:visibility="visible" />
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+
     </LinearLayout>
 
 
@@ -72,14 +78,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/blue_grey_900">
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="visible"
-            tools:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/sign_out_and_disconnect"
